# e-commerce-scarper

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py  analyze_jobs.py
data/: category_summary.csv  products.csv
docs/: approach.md  setup.md
scrapy_project/: __init__.py  items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
scrapy_project/spiders/: job_spider.py
selenium/: __init__.py  config.py  job_search.py  utils.py
src/: main.py
src/scraper/: crawler.py  exporters.py  parsers.py  utils.py
